--- a/front/style.css
+++ b/front/style.css
@@ -94,6 +94,9 @@
 .btn {
     width: 200px;
     height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 50px;
     background-color: transparent;
     border: 2px solid white;
@@ -105,6 +108,11 @@
 
 .btn:hover {
     cursor: pointer;
+}
+
+.btn h1 {
+
+    font-size: 18px;
 }
 
 
